--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,20 +1,21 @@
 steps:
  # build the container image
  - name: 'gcr.io/cloud-builders/docker'
-   args: ['build', '-t', 'gcr.io/$PROJECT_ID/testing-code:$COMMIT_SHA', '.']
+   args: ['build', '-t', 'gcr.io/$PROJECT_ID/[SERVICE-NAME]:$COMMIT_SHA', '.']
  # push the container image to Container Registry
  - name: 'gcr.io/cloud-builders/docker'
-   args: ['push', 'gcr.io/$PROJECT_ID/testing-code:$COMMIT_SHA']
+   args: ['push', 'gcr.io/$PROJECT_ID/[SERVICE-NAME]:$COMMIT_SHA']
  # Deploy container image to Cloud Run
  - name: 'gcr.io/cloud-builders/gcloud'
    args:
    - 'run'
    - 'deploy'
-   - 'testing-code'
+   - '[SERVICE-NAME]'
    - '--image'
-   - 'gcr.io/$PROJECT_ID/testing-code:$COMMIT_SHA'
+   - 'gcr.io/$PROJECT_ID/[SERVICE-NAME]:$COMMIT_SHA'
    - '--region'
-   - 'asia-east1'
+   - '[REGION]'
    - '--platform'
+   - 'managed'
  images:
- - 'gcr.io/$PROJECT_ID/testing-code:$COMMIT_SHA'
+ - 'gcr.io/$PROJECT_ID/[SERVICE-NAME]:$COMMIT_SHA'
