--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,21 +1,21 @@
 steps:
  # build the container image
  - name: 'gcr.io/cloud-builders/docker'
-   args: ['build', '-t', 'gcr.io/$PROJECT_ID/[SERVICE-NAME]:$COMMIT_SHA', '.']
+   args: ['build', '-t', 'gcr.io/$PROJECT_ID/[testing-code]:$COMMIT_SHA', '.']
  # push the container image to Container Registry
  - name: 'gcr.io/cloud-builders/docker'
-   args: ['push', 'gcr.io/$PROJECT_ID/[SERVICE-NAME]:$COMMIT_SHA']
+   args: ['push', 'gcr.io/$PROJECT_ID/[testing-code]:$COMMIT_SHA']
  # Deploy container image to Cloud Run
  - name: 'gcr.io/cloud-builders/gcloud'
    args:
    - 'run'
    - 'deploy'
-   - '[SERVICE-NAME]'
+   - '[testing-code]'
    - '--image'
-   - 'gcr.io/$PROJECT_ID/[SERVICE-NAME]:$COMMIT_SHA'
+   - 'gcr.io/$PROJECT_ID/[testing-code]:$COMMIT_SHA'
    - '--region'
-   - '[REGION]'
+   - '[asia-east1]'
    - '--platform'
    - 'managed'
  images:
- - 'gcr.io/$PROJECT_ID/[SERVICE-NAME]:$COMMIT_SHA'
+ - 'gcr.io/$PROJECT_ID/[testing-code]:$COMMIT_SHA'
