--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,10 @@
  steps:
  # build the container image
  - name: 'gcr.io/cloud-builders/docker'
-   args: ['build', '-t', 'gcr.io/$PROJECT_ID/testing-code:$COMMIT_SHA', '.']
+   args: ['build', '-t', 'gcr.io/$PROJECT_ID/testing-code:so-parser:latest', '.']
  # push the container image to Container Registry
  - name: 'gcr.io/cloud-builders/docker'
-   args: ['push', 'gcr.io/$PROJECT_ID/testing-code:$COMMIT_SHA']
+   args: ['push', 'gcr.io/$PROJECT_ID/testing-code:so-parser:latest']
  # Deploy container image to Cloud Run
  - name: 'gcr.io/cloud-builders/gcloud'
    args:
@@ -12,10 +12,10 @@
    - 'deploy'
    - 'testing-code'
    - '--image'
-   - 'gcr.io/$PROJECT_ID/testing-code:$COMMIT_SHA'
+   - 'gcr.io/$PROJECT_ID/testing-code:so-parser:latest'
    - '--region'
    - 'asia-east1'
    - '--platform'
    - 'managed'
  images:
- - 'gcr.io/$PROJECT_ID/testing-code:$COMMIT_SHA'
+ - 'gcr.io/$PROJECT_ID/testing-code:so-parser:latest'
