--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,12 +12,11 @@
    - 'deploy'
    - 'desperados'
    - '--image'
-   - 'gcr.io/$PROJECT_ID/desperados'
+   - 'gcr.io/kiss-16325/desperados'
    - '--region'
    - 'asia-east1'
    - '--platform'
    - 'managed'
-   - '--network'
-   - 'cloudbuild'
+   - '--allow-unauthenticated'
  images:
  - 'gcr.io/$PROJECT_ID/desperados' 
