--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,22 +1,21 @@
  steps:
  # build the container image
  - name: 'gcr.io/cloud-builders/docker'
-   args: ['build', '-t', 'gcr.io/$PROJECT_ID/desperados:$COMMIT_SHA', '.']
+   args: ['build', '-t', 'gcr.io/$PROJECT_ID/testing-code:$COMMIT_SHA', '.']
  # push the container image to Container Registry
  - name: 'gcr.io/cloud-builders/docker'
-   args: ['push', 'gcr.io/$PROJECT_ID/desperados:$COMMIT_SHA']
+   args: ['push', 'gcr.io/$PROJECT_ID/testing-code:$COMMIT_SHA']
  # Deploy container image to Cloud Run
  - name: 'gcr.io/cloud-builders/gcloud'
    args:
    - 'run'
    - 'deploy'
-   - 'desperados'
+   - 'testing-code'
    - '--image'
-   - 'gcr.io/kiss-16325/desperados'
+   - 'gcr.io/$PROJECT_ID/testing-code'
    - '--region'
    - 'asia-east1'
    - '--platform'
    - 'managed'
-   - '--allow-unauthenticated'
  images:
- - 'gcr.io/$PROJECT_ID/desperados' 
+ - 'gcr.io/$PROJECT_ID/testing-code'
